@@ -1,3 +1,6 @@
+2011-09-30  Kirit Saelensminde  <kirit@felspar.com>
+ The host constructors now normalise to lower case any host name they are given.
+
 2011-08-15  Kirit Saelensminde  <kirit@felspar.com>
  Connection errors now report the host and port they're trying to connect to.
  The pop3 tests now allow the server to be configured, and it is more aggresive in keeping the mailbox empty.
